@@ -41,6 +41,19 @@ content = /{{ '{{$dist->name}}-*' }}
 content = /todo.txt
 content = /todo/
 
+[GenerateFile / clean-namespaces.t]
+filename = xt/release/clean-namespaces.t
+is_template = 1
+content = use strict;
+content = use warnings FATAL => 'all';
+content =
+content = use Test::More;
+content = use Test::CleanNamespaces;
+content =
+content = namespaces_clean(grep { !/^{{ '{{ $dist->name =~ s/-/::/gr }}' }}::Conflicts$/ } Test::CleanNamespaces->find_modules);
+content =
+content = done_testing;
+
 [Git::Init]
 commit_message = initial commit%n%nvia [Git::Init] in {{ $dist->name }}-{{ $dist->version }}, github profile.
 config = user.email ether@cpan.org
