@@ -1,9 +1,0 @@
-use strict;
-use warnings FATAL => 'all';
-
-use Test::More;
-use Test::CleanNamespaces;
-
-all_namespaces_clean();
-
-done_testing;
